refactor claude runner and workspace sync

--- a/.env.example
+++ b/.env.example
@@ -2,15 +2,35 @@
 
 # Anthropic API key for Claude (optional - uses Claude CLI if not set)
 # ANTHROPIC_API_KEY=sk-ant-xxxxx
+# Optional: override Claude CLI model alias (e.g., sonnet or opus)
+# CLAUDE_MODEL=sonnet
+# Optional: per-task overrides (fall back to CLAUDE_MODEL if set)
+# CLAUDE_MODEL_SMART_RESPOND=sonnet
+# CLAUDE_MODEL_LINK=sonnet
+# CLAUDE_MODEL_LISTING=sonnet
+# CLAUDE_MODEL_CARFAX=sonnet
+# CLAUDE_MODEL_NEGOTIATION=sonnet
+# CLAUDE_MODEL_EMAIL=sonnet
+# CLAUDE_MODEL_RANK=sonnet
+# CLAUDE_MODEL_VOICEMAIL=sonnet
+# Optional: allow Claude to bypass permission prompts (default: true)
+# CLAUDE_DANGEROUS=true
+# Optional: log Claude task prompt info and CLI args
+# CLAUDE_LOG_PROMPT=1
+# Optional: log full task file contents (can be very verbose)
+# CLAUDE_LOG_TASK=1
 
 # OpenAI API key (for voicemail transcription)
 OPENAI_API_KEY=sk-xxxxx
 
 # Email credentials (Gmail)
 # For Gmail, use an App Password (not your regular password)
+# EMAIL_USER is also used as the "from" address in dealer communications
 # See: https://support.google.com/accounts/answer/185833
 EMAIL_USER=your-car-search@gmail.com
 EMAIL_PASSWORD=your-app-password
+# Optional: allow self-signed IMAP certificates (use only if you trust the server)
+# IMAP_ALLOW_SELF_SIGNED=true
 
 # Twilio credentials (for SMS)
 # Get these from: https://console.twilio.com/
@@ -19,6 +39,7 @@ TWILIO_AUTH_TOKEN=xxxxx
 TWILIO_PHONE_NUMBER=+1xxxxxxxxxx
 
 # Buyer information (used in communications)
+# BUYER_NAME is used as the "from" name in dealer communications
 BUYER_NAME=Your Name
 BUYER_PHONE=+1xxxxxxxxxx
 
